[gd_scene load_steps=4 format=3 uid="uid://cii1ihgh4btk3"]

[ext_resource type="PackedScene" uid="uid://derskiomatdqh" path="res://coordinate_system.tscn" id="1_was6d"]
[ext_resource type="Script" path="res://buttons/play_segment_intersection.gd" id="2_ymxg1"]

[sub_resource type="Theme" id="Theme_thapl"]
LineEdit/colors/selection_color = Color(0.513726, 0.498039, 0.462745, 1)

[node name="segment_intersection_menu" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1800.0
offset_bottom = 720.0
color = Color(0.972549, 0.972549, 0.972549, 1)

[node name="CoordinateSystem" parent="ColorRect" instance=ExtResource("1_was6d")]
position = Vector2(4, 71)
points = PackedVector2Array(0, -500, 0, 647, 2000, 647)

[node name="LinesCountTbx" type="LineEdit" parent="ColorRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 144.0
offset_right = 793.0
offset_bottom = 228.0
theme_override_font_sizes/font_size = 25
text = "20"
alignment = 1

[node name="RngSeedTbx" type="LineEdit" parent="ColorRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 381.0
offset_right = 793.0
offset_bottom = 465.0
theme = SubResource("Theme_thapl")
theme_override_font_sizes/font_size = 25
text = "17"
alignment = 1

[node name="MeanLineLenTbx" type="LineEdit" parent="ColorRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 260.0
offset_right = 793.0
offset_bottom = 344.0
theme_override_font_sizes/font_size = 25
text = "400"
alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 504.0
offset_right = 793.0
offset_bottom = 588.0
theme_override_font_sizes/font_size = 30
text = "Click to play"
script = ExtResource("2_ymxg1")

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 111.0
offset_top = 144.0
offset_right = 447.0
offset_bottom = 228.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Lines count:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 111.0
offset_top = 381.0
offset_right = 447.0
offset_bottom = 465.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "RNG seed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 111.0
offset_top = 260.0
offset_right = 447.0
offset_bottom = 344.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Mean line length:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ErrorLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 457.0
offset_top = 612.0
offset_right = 793.0
offset_bottom = 696.0
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 272.0
offset_top = 29.0
offset_right = 725.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 27
text = "Multiple line segment intersection
Bentleyâ€“Ottmann algorithm"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ColorRect/Button" to="ColorRect/Button" method="_on_pressed"]
